ColorCode/frontend/static/css/index.css
html,
body {
  height: 100%;
  width: 100%;
  margin: 0;
  padding: 0;
}

#main {
  position: fixed;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

#app {
  width: 100%;
  height: 100%;
}

#prefs {
  font-family: Arial, Helvetica, sans-serif;
  border-collapse: collapse;
  min-width: 75%;
  margin: auto;
  text-align: center;
}
#prefs td:nth-child(1){
text-align: right;
}
#prefs td:nth-child(2){
  margin: 1px;
}
#prefs td:nth-child(3){
text-align: left;
}
#prefs td {
border: 0px;
padding: 2px;
}

/*******************/
/*** FAKE-UI CSS ***/
/*******************/

.palette-box {
  padding: 5px;
  width: 90%;
  background-color: #f0f0f0;
}

.fake-header {
  background-color: #000000;
  width: 100%;
  margin-bottom: 3px;
}

.fake-body {
  margin: 2px;
  padding: 2px;
}

.fake-main-window {
  background-color: #909090;
  margin: 2px;
  padding: 2px;
}

.fake-secondary-window {
  background-color: #f5f5f5;
  color: black;
  margin: 2px;
  padding: 2px;
}

.fake-button {
  background-color: #ffffff;
  color: blue;
  margin: 2px;
}

.fake-alert {
  background-color: #ffffff;
  color: orangered;
  margin: 2px;
  padding: 2px;
}

